[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
pattern = "default-unprefixed"

[project]
name = "simpleflow"
description = "Python library for dataflow programming with Amazon SWF"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Greg Leclercq" }]
maintainers = [{ "email" = "tech@botify.com" }]
keywords = ["simpleflow", "amazon swf", "simple workflow"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dynamic = ["version"]

dependencies = [
    "attrs",
    "boto3>=1.28.20",
    "dill>=0.3.6",
    "diskcache>=4.1.0",
    "Jinja2",
    "markupsafe",
    "multiprocess>=0.70.14",
    "lazy_object_proxy",
    "lockfile>=0.9.1",
    "tabulate>=0.8.2,<1.0.0",
    "setproctitle",
    "click",
    "psutil",
    "pytz",
]

[project.urls]
documentation = "https://botify-labs.github.io/simpleflow"
repository = "https://github.com/botify-labs/simpleflow"
changelog = "https://github.com/botify-labs/simpleflow/blob/main/CHANGELOG.md"

[project.scripts]
simpleflow = "simpleflow.command:cli"

[tool.ruff]
line-length = 120
unsafe-fixes = true

[tool.ruff.lint]
extend-select = [
    "UP",  # pyupgrade
    "I",   # isort
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "RUF", # ruff
]
allowed-confusables = ["‘", "’"]
extend-ignore = []
ignore = ["E501"]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.bandit]
exclude_dirs = ["/tests", "/examples", "/venv", "/build"]
skips = ["B404"]

[tool.pytest.ini_options]
addopts = "-vv -rfE --no-success-flaky-report --doctest-modules --ignore=setup.py --ignore=tasks.py --ignore=docs/ --ignore=build/ --ignore=examples/"
env = [
    "PYTHONDONTWRITEBYTECODE=1",
    # The AWS_DEFAULT_REGION parameter determines the region used for SWF.
    # Leaving it to a value different than "us-east-1" would break moto,
    # because moto.swf only mocks calls to us-east-1 region for now.
    "AWS_DEFAULT_REGION=us-east-1",
    # Disable AWS credentials.
    # NB: we set them to wrong values so boto believes they're here, so it
    # issues integration requests later caught by VCR. For more information
    # see tests/integration/README.md
    "AWS_ACCESS_KEY_ID=1234",
    "AWS_SECRET_ACCESS_KEY=1234",
    # Enable various test optimizations
    "SIMPLEFLOW_ENV=test",
    "SIMPLEFLOW_CLEANUP_PROCESSES=yes",
    # Simple variable to control the number of connection retries
    "SWF_CONNECTION_RETRIES=1",
    # Don't run real SWF requests if a cassette doesn't match
    # See tests/integration/README.md for instructions about cassettes updating
    "SIMPLEFLOW_VCR_RECORD_MODE=none",
    # Disable jumbo fields
    "SIMPLEFLOW_JUMBO_FIELDS_BUCKET=",
    # setproctitle segfaults in forked children on macOS (py-setproctitle#165)
    "SIMPLEFLOW_DISABLE_SETPROCTITLE=1",
    # Prevent CI from overriding boto configuration
    "BOTO_CONFIG=/dev/null",
]


[tool.hatch.build]
include = ["/simpleflow"]
exclude = ["*~"]

[dependency-groups]
dev = [
    "boto3-stubs[s3,swf]",
    "cffi==v1.17.0rc1; python_full_version=='3.13.0b4'", # via cryptography via moto, secretstorage
    "flaky",
    "hatch",
    "invoke",
    "moto>=4.2.8,<5.0.0",
    "packaging",
    "pre-commit",
    "pytest",
    "pytest-xdist>=3.2.0",
    "ruff",
    "setuptools<72",                                     # See https://github.com/pypa/setuptools/issues/4519
    "sphinx",
    "sphinx_rtd_theme",
    "typing-extensions",
    "vcrpy",
    "twine",
    "pytest-env>=1.0.1",
]

doc = [
    "mkdocs",
    "mkdocs-material",
    "pygments",
    "pymdown-extensions",
    "markdown-include",
]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple/"
publish-url = "https://pypi.org/legacy/"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
